@@ -10,6 +10,7 @@ import org.gradle.api.file.RegularFileProperty;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFiles;
+import org.gradle.api.tasks.Optional;
 import org.gradle.api.tasks.OutputDirectory;
 import org.gradle.api.tasks.OutputFile;
 import org.gradle.api.tasks.TaskAction;
@@ -70,6 +71,13 @@ public abstract class InstallProductionServerTask extends DefaultTask {
     @OutputFile
     public abstract RegularFileProperty getNeoForgeMainClassArgFile();
 
+    /**
+     * Allows the main class from the version profile to be overridden to be something else.
+     */
+    @Input
+    @Optional
+    public abstract Property<String> getMainClass();
+
     @Inject
     public InstallProductionServerTask(ExecOperations execOperations) {
         this.execOperations = execOperations;
@@ -92,7 +100,7 @@ public abstract class InstallProductionServerTask extends DefaultTask {
         });
 
         // We need to know the name of the main class to split the arg-file into JVM and program arguments
-        var mainClass = getMainClass();
+        var mainClass = getEffectiveMainClass();
         // The difference here is only really in path separators...
         var argFileName = File.pathSeparatorChar == ':' ? "unix_args.txt" : "win_args.txt";
         var argFilePath = installDir.resolve("libraries/net/neoforged/neoforge/" + getNeoForgeVersion().get() + "/" + argFileName);
@@ -102,6 +110,11 @@ public abstract class InstallProductionServerTask extends DefaultTask {
         );
         var startOfSplit = argFileContent.indexOf(mainClass);
         if (startOfSplit == -1) {
+            // Try the old class
+            mainClass = "cpw.mods.bootstraplauncher.BootstrapLauncher";
+            startOfSplit = argFileContent.indexOf(mainClass);
+        }
+        if (startOfSplit == -1) {
             throw new GradleException("Argfile " + argFilePath + " does not contain the main class name " + mainClass);
         }
         if (argFileContent.indexOf(mainClass, startOfSplit + 1) != -1) {
@@ -110,6 +123,8 @@ public abstract class InstallProductionServerTask extends DefaultTask {
 
         var jvmArgs = argFileContent.substring(0, startOfSplit);
         var programArgs = argFileContent.substring(startOfSplit + mainClass.length() + 1);
+        var programArgParams = RunUtils.splitJvmArgs(programArgs);
+        RunUtils.cleanProgramArgs(programArgParams);
 
         // We need to sanitize all JVM args by removing modular args
         var jvmArgParams = RunUtils.splitJvmArgs(jvmArgs);
@@ -119,10 +134,14 @@ public abstract class InstallProductionServerTask extends DefaultTask {
         Files.write(getNeoForgeJvmArgFile().getAsFile().get().toPath(), jvmArgParams, Charset.forName(System.getProperty("native.encoding")));
         Files.writeString(getNeoForgeMainClassArgFile().getAsFile().get().toPath(), mainClass, Charset.forName(System.getProperty("native.encoding")));
         // This is read by our own code in UTF-8
-        Files.writeString(getNeoForgeProgramArgFile().getAsFile().get().toPath(), programArgs, StandardCharsets.UTF_8);
+        Files.write(getNeoForgeProgramArgFile().getAsFile().get().toPath(), programArgParams, StandardCharsets.UTF_8);
     }
 
-    private String getMainClass() throws IOException {
+    private String getEffectiveMainClass() throws IOException {
+        if (getMainClass().isPresent()) {
+            return getMainClass().get();
+        }
+
         String versionContent;
         try (var zf = new ZipFile(getInstaller().getSingleFile())) {
             var entry = zf.getEntry("version.json");
